RESOLVED FIXED298379
[css-anchor-position-1] wrong clip testing with 'position-visibility: anchors-visible'
https://bugs.webkit.org/show_bug.cgi?id=298379
Summary [css-anchor-position-1] wrong clip testing with 'position-visibility: anchors...
Antti Koivisto
Reported 2025-09-04 02:01:30 PDT
<style> .clip { overflow: hidden; border: 2px solid red; } .c { position: absolute; top: 50px; width: 100px; height: 100px; border: 2px solid green; } .anchor { anchor-name: --foo; background: blue; } .anchored { left: anchor(left); top: anchor(bottom); position: absolute; position-anchor: --foo; background: green; } </style> <div class=clip><div class=c><div class=anchor>anchor</div></div></div> <div class=anchored>anchored</div>
Attachments
Antti Koivisto
Comment 1 2025-09-04 02:02:13 PDT
Antti Koivisto
Comment 2 2025-09-04 03:28:00 PDT
Antti Koivisto
Comment 3 2025-09-04 23:46:46 PDT
Submitted web-platform-tests pull request: https://github.com/web-platform-tests/wpt/pull/54708
Note You need to log in before you can comment on or make changes to this bug.