[css-anchor-position-1] wrong clip testing with 'position-visibility: anchors-visible' https://bugs.webkit.org/show_bug.cgi?id=298379 rdar://159790886

Reviewed by Alan Baradlay.

* LayoutTests/TestExpectations:
* LayoutTests/imported/w3c/web-platform-tests/css/css-anchor-position/position-visibility-anchors-visible-clip-expected.html: Added.
* LayoutTests/imported/w3c/web-platform-tests/css/css-anchor-position/position-visibility-anchors-visible-clip-ref.html: Added.
* LayoutTests/imported/w3c/web-platform-tests/css/css-anchor-position/position-visibility-anchors-visible-clip.html: Added.
* Source/WebCore/style/AnchorPositionEvaluator.cpp:
(WebCore::Style::AnchorPositionEvaluator::isDefaultAnchorInvisibleOrClippedByInterveningBoxes):

Traverse the container chain instead of the parent chain to find the boxes that actually clip the anchor.

Canonical link: https://commits.webkit.org/299554@main